--- a/template/suite.tmpl
+++ b/template/suite.tmpl
@@ -5,80 +5,87 @@ import (
 	"github.com/stretchr/testify/suite"
 )
 
-func Test{{.StructName}}Suite(t *testing.T) {
-	suite.Run(t, new({{.StructName}}TestSuite))
+{{if .IsExported}}
+func Test{{.Name}}Suite(t *testing.T) {
+	suite.Run(t, new({{.Name}}TestSuite))
 }
+{{else}}
+func Test_{{.Name}}Suite(t *testing.T) {
+	suite.Run(t, new({{.Name}}TestSuite))
+}
+{{end}}
 
-type {{.StructName}}TestSuite struct {
+type {{.Name}}TestSuite struct {
 	suite.Suite
 	// 这里可以添加测试所需的字段
+	p *{{.Name}}
 }
 
 // SetupAllSuite 在所有测试套件开始前运行
-func (suite *{{.StructName}}TestSuite) SetupAllSuite() {
+func (suite *{{.Name}}TestSuite) SetupAllSuite() {
 	// 在所有测试套件开始前运行
 }
 
 // TearDownAllSuite 在所有测试套件结束后运行
-func (suite *{{.StructName}}TestSuite) TearDownAllSuite() {
+func (suite *{{.Name}}TestSuite) TearDownAllSuite() {
 	// 在所有测试套件结束后运行
 }
 
 // SetupTestSuite 在当前测试套件开始前运行
-func (suite *{{.StructName}}TestSuite) SetupTestSuite() {
+func (suite *{{.Name}}TestSuite) SetupTestSuite() {
 	// 在当前测试套件开始前运行
 }
 
 // TearDownTestSuite 在当前测试套件结束后运行
-func (suite *{{.StructName}}TestSuite) TearDownTestSuite() {
+func (suite *{{.Name}}TestSuite) TearDownTestSuite() {
 	// 在当前测试套件结束后运行
 }
 
 // SetupSubTest 在每个子测试开始前运行
-func (suite *{{.StructName}}TestSuite) SetupSubTest() {
+func (suite *{{.Name}}TestSuite) SetupSubTest() {
 	// 在每个子测试开始前运行
 }
 
 // TearDownSubTest 在每个子测试结束后运行
-func (suite *{{.StructName}}TestSuite) TearDownSubTest() {
+func (suite *{{.Name}}TestSuite) TearDownSubTest() {
 	// 在每个子测试结束后运行
 }
 
 // BeforeTest 在每个测试方法开始前运行
-func (suite *{{.StructName}}TestSuite) BeforeTest(suiteName, testName string) {
+func (suite *{{.Name}}TestSuite) BeforeTest(suiteName, testName string) {
 	// 在每个测试方法开始前运行
 }
 
 // AfterTest 在每个测试方法结束后运行
-func (suite *{{.StructName}}TestSuite) AfterTest(suiteName, testName string) {
+func (suite *{{.Name}}TestSuite) AfterTest(suiteName, testName string) {
 	// 在每个测试方法结束后运行
 }
 
-func (suite *{{.StructName}}TestSuite) SetupSuite() {
+func (suite *{{.Name}}TestSuite) SetupSuite() {
 	// 在所有测试开始前运行
 }
 
-func (suite *{{.StructName}}TestSuite) SetupTest() {
+func (suite *{{.Name}}TestSuite) SetupTest() {
 	// 在每个测试开始前运行
 }
 
-func (suite *{{.StructName}}TestSuite) TearDownTest() {
+func (suite *{{.Name}}TestSuite) TearDownTest() {
 	// 在每个测试结束后运行
 }
 
-func (suite *{{.StructName}}TestSuite) TearDownSuite() {
+func (suite *{{.Name}}TestSuite) TearDownSuite() {
 	// 在所有测试结束后运行
 }
 {{range .Methods}}
 {{if .IsExported}}
-func (suite *{{$.StructName}}TestSuite) Test{{.Name}}() {
+func (suite *{{$.Name}}TestSuite) Test{{.Name}}() {
 	// TODO: 实现 {{.Name}} 方法的测试用例
 	// 参数: {{.Params}}
 	// 返回值: {{.Results}}
 	suite.T().Logf("测试 {{.Name}} 方法")
 }
 {{else}}
-func (suite *{{$.StructName}}TestSuite) Test_{{.Name}}() {
+func (suite *{{$.Name}}TestSuite) Test_{{.Name}}() {
 	// TODO: 实现未导出的 {{.Name}} 方法的测试用例
 	// 参数: {{.Params}}
 	// 返回值: {{.Results}}
